css/gallery.css
@font-face {
  font-display: swap;
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: url('../assets/fonts/montserrat-v30-latin-regular.woff2') format('woff2');
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root {
    --darkNavy: #090917;
    --white: #ebe4e4;
    --grey: #bab6b6;
    --offWhite: #e8e5e5;
}
::-webkit-scrollbar {
    width: .5rem;
}
::-webkit-scrollbar-track {
    background: var(--darkNavy);
}
::-webkit-scrollbar-thumb {
    background-color: var(--offWhite);
    border-radius: 15px;
}
a:focus {
    outline: var(--white) 2px solid;
}
a:focus:not(:focus-visible) {
    outline: none;
}
body {
    width: 100%;
    height: 100vh;
    background-color: var(--darkNavy);
    font-family: 'Montserrat', sans-serif;
    cursor: default;
}
.wrapper {
    max-width: 90rem;
    padding-bottom: 2rem;
}
nav.active .hamburger-menu .bars::before {
    transform: translateY(0) rotate(45deg);
}
nav.active .hamburger-menu .bars::after {
    transform: translateY(0) rotate(-45deg);
}
.links {
    display: flex;
    align-items: center;
    justify-content: flex-start;
}
.links ul li {
    display: inline-block;
    list-style: none;
    padding: 1rem;
}
.links ul li a {
    position: relative;
    color: var(--white);
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 5px;
    -webkit-tap-highlight-color: transparent;
}
.links ul li a::before {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 50%;
    width: 0;
    height: 1px;
    background-color: var(--white);
    transition: width 350ms ease, left 350ms ease;
}
.links ul li a:hover::before {
    width: 100%;
    left: 0;
}
.hamburger-menu {
    display: none;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: .75rem;
    left: 1rem;
    height: 2rem;
    width: 1.25rem;
    background-color: transparent;
    -webkit-tap-highlight-color: transparent;
    border: none;
    cursor: pointer;
    z-index: 1;
}
.bars {
    position: relative;
    height: 3px;
    width: 100%;
    border-radius: 5px;
    background-color: transparent;
}
.bars::before,
.bars::after {
    content: '';
    position: absolute;
    height: 70%;
    width: 100%;
    border-radius: 5px;
    background-color: var(--white);
    transition: transform 350ms ease;
}
.bars::before {
    transform: translateY(-4px);
}
.bars::after {
    transform: translateY(4px);
}
.gallery {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: .8rem;
    padding: 1.25rem;
    transition: opacity 100ms ease-out;
}
.gallery.active {
    opacity: 0;
}
.gallery h1 {
    text-align: center;
    text-transform: uppercase;
    font-size: clamp(1.1rem, 3vw, 1.5rem);
    margin: 45px auto;
    font-weight: 400;
    letter-spacing: 3px;
    color: var(--white);
    grid-column: span 3;
}
.gallery .img-container {
    position: relative;
}
.gallery .img-container .description {
    position: absolute;
    bottom: 0;
    border: solid 1.5px var(--grey);
    color: var(--white);
    background: var(--darkNavy);
    text-align: center;
    text-transform: uppercase;
    font-size: clamp(.9rem, 3vw, 1rem);
    padding: .5rem;
    width: 100%;
}
.gallery .img-container img {
    display: block;
    width: 100%;
    height: auto;
    color: var(--darkNavy);
    border: solid 2px var(--grey);
    contain: layout;
    cursor: pointer;
}
.lightbox {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: fit-content;
    height: auto;
    z-index: 3;
}
.lightbox-no-scroll {
    overflow: hidden;
    pointer-events: none;
}
.lightbox-no-scroll .lightbox,
.lightbox-no-scroll .lightbox img,
.lightbox-no-scroll .overlay {
    pointer-events: auto;
}
.lightbox > img {
    display: none;
    max-width: 90vw;
    max-height: 85vh;
    width: auto;
    height: auto;
    object-fit: contain;
    cursor: default;
}
.lightbox > img.active {
    display: block;
}
.lightbox .btn {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background: transparent;
    border: none;
    color: var(--white);
    cursor: pointer;
    visibility: hidden;
    pointer-events: none;
}
.lightbox .btn.active {
    visibility: visible;
    pointer-events: auto;
}
.lightbox .btn .chevron {
    width: 5rem;
    height: auto;
}
.lightbox .previous {
    left: 0;
    transform: translateY(-50%) translateX(-100%);
}
.lightbox .next {
    right: 0;
    transform: translateY(-50%) translateX(100%);
}
.gallery-overlay {
    opacity: 0;
    pointer-events: none;
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    background: var(--darkNavy);
    transition: opacity 150ms ease;
    z-index: 2;
}
.gallery-overlay.active {
    opacity: 1;
    pointer-events: auto;
}
@media screen and (max-width: 1135px) {
    .no-scroll {
        position: fixed;
        overflow-y: hidden;
    }
    nav.active .links {
        transform: translate(0);
        visibility: visible;
        transition: transform 350ms ease, visibility 0s;
    }
    .links {
        display: flex;
        align-items: center;
        justify-content: center;
        position: fixed;
        top: 0;
        right: 0;
        height: 100%;
        width: 100%;
        background-color: var(--darkNavy);
        transform: translateY(-100%);
        transition: transform 300ms;
        visibility: hidden;
        overflow-y: auto;
        z-index: 1;
    }
    .links ul li {
        display: flex;
        flex-direction: column;
        padding: 1.75rem;
    }
    .links ul li a {
        color: var(--white);
    }
    .links ul li a::before {
        content: none;
    }
    .hamburger-menu {
        display: flex;
    }
}
@media screen and (max-width: 1060px) {
    .lightbox img {
        max-width: 90vw;
        height: auto;
        margin: 0 auto;
    }
    .lightbox .btn {
        display: none;
    }
}
@media screen and (max-width: 865px) {
    .gallery {
        grid-template-columns: repeat(2, 1fr);
    }
    .gallery h1 {
        grid-column: span 2;
    }
    .gallery .img-container .description {
        padding: .35rem;
    }
}
@media screen and (max-width: 585px) {
    .gallery {
        grid-template-columns: repeat(1, 1fr);
    }
    .gallery h1 {
        grid-column: span 1;
    }
}
@media screen and (orientation: landscape) and (max-width: 960px) {
    .lightbox {
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 80vw;
        height: auto;
    }
    .lightbox .btn {
        display: none;
    }
}
@media screen and (orientation: landscape) and (max-width: 935px) {
    .links ul li {
        padding: 1.1rem;
    }
}

